--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html {
 }
 
 .link-card h2 {
-  font-family: Dosis, sans-serif;;
+  font-family: Dosis, sans-serif;
   font-size: 1.5rem;
   line-height: 1.5rem;
   margin: 0;
